Task 14 : Update Project files